--- a/samples/Dynamics-Fraud-Protection/ui-templates/Multifactor.html
+++ b/samples/Dynamics-Fraud-Protection/ui-templates/Multifactor.html
@@ -1,10 +1,7 @@
-﻿@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0080)../assets/AzureBlue/selfAsserted.cshtml -->
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -19,6 +16,7 @@
     <link href="https://<YOUR-UI-BASE-URL>/css/common.css" rel="stylesheet" type="text/css" />
     <link href="https://<YOUR-UI-BASE-URL>/css/phonefactor.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
     <div class="container  phonefactor_container ">
         <div class="row">
@@ -33,8 +31,9 @@
             </div>
         </div>
     </div>
-    
+
     <script src="https://<YOUR-UI-BASE-URL>/js/dfp.js"></script>
 
 </body>
+
 </html>
