--- a/samples/Dynamics-Fraud-Protection/ui-templates/SelfAsserted.html
+++ b/samples/Dynamics-Fraud-Protection/ui-templates/SelfAsserted.html
@@ -10,8 +10,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"
-        type="text/css" />
+    <link href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
     <link href="https://<YOUR-UI-BASE-URL>/css/assets.css" rel="stylesheet" type="text/css" />
     <link href="https://<YOUR-UI-BASE-URL>/css/common.css" rel="stylesheet" type="text/css" />
